--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,4 +1,8 @@
-/*
+body {
+
+  background-image: url('./images/gossip-time-nico.png');
+ 
+ }
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
  *
