--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,8 +1,4 @@
-body {
-
-  background-image: url('./images/gossip-time-nico.png');
- 
- }
+/*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
  *
@@ -17,3 +13,9 @@ body {
  *= require_tree .
  *= require_self
  */
+
+ body{
+  text-align: center;
+  background-image:
+                   url("gossip-time-nico.png");
+}
