--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
     </head>
     <body>
+        <header>
   <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
   <%= link_to "Home", index_path, class: "nav-link" %>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
@@ -29,8 +30,7 @@
       </li>
     </ul>
   </div>
-</nav>
+  </header>
 <div class="container" style="padding-top: 5rem;">    
 <%= yield %>
-  </body>
 </html>
