Add files at 27/10/2020

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -3,7 +3,9 @@
   <div class="row justify-content-center">
   <div class="card mx-auto text-black bg-light" style="width: 50rem;">
   <div class="card-body mx-auto">
-  <h1> Bienvenue, sur le site des potins a gogo ! </h1>
+  <h1> Bienvenue, sur le site des potins a gogo ! </h1><br><br>
+
+  <%= button_to "Creer un potin", new_gossip_path, :method => "get" %>
   </div>
   </div>
 </div>
